Hello_world/kubernetes-hello-world.yaml
apiVersion: v1
kind: Pod
metadata:
   name: kubernetes-demo-pod
   namespace: hello-world
   labels:
     app: demoApp
spec:
  containers:
    - name: kubernetes-demo-container
      image: hcwxd/kubernetes-demo
      ports:
        - containerPort: 3000
