Hello_world/kubernetes-hello-world-towservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: hello-world
spec:
  type: NodePort
  selector:
    app: blue-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30492
---
apiVersion: v1
kind: Service
metadata:
  name: purple-service
  namespace: hello-world
spec:
  type: NodePort
  selector:
    app: purple-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 32086
